--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@
   height: 100vh;
 }
 .navbar{
-  background-color: #F55A5A;
+  background-color: #ff4d4d;
  display: flex;
  align-items: center;
  justify-content: center;
